<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="131dp"
    android:background="@color/white">

        <ImageView
            android:id="@+id/article_pic"
            android:layout_width="90dp"
            android:layout_height="98dp"
            android:background="@mipmap/guide_test_bg"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="15dp"/>
        <TextView
            android:id="@+id/article_label"
            android:layout_width="44dp"
            android:layout_height="20dp"
            android:text="@string/label_kepu"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:textSize="10sp"
            android:layout_marginLeft="121dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/blue_frame"
            />
        <TextView
            android:id="@+id/article_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/psy_info"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginLeft="121dp"
            android:layout_marginTop="42dp"
            />
        <TextView
            android:id="@+id/article_info"
            android:layout_width="170dp"
            android:layout_height="36dp"
            android:layout_marginLeft="121dp"
            android:layout_marginTop="74dp"
            android:textColor="@color/gray"
            android:textSize="12sp"
            android:text="@string/psy_detail"/>
</RelativeLayout>