<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/myinfo_mod_top"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/top_gray"
            tools:ignore="MissingConstraints">

            <ImageButton
                android:id="@+id/myinfo_mod_back"
                android:layout_marginLeft="20dp"
                android:layout_centerVertical="true"
                style="@style/Back_Button" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/myinfo_mod_title"
                android:textColor="@color/black"
                android:textSize="24sp"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/myinfo_mod_top"
            android:background="@color/white"
            tools:ignore="MissingConstraints,NotSibling"
            android:orientation="vertical">

            <!--昵称-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="65dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp"
                    android:text="@string/myinfo_mod_name"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/myinfo_mod_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/myinfo_mod_name"
                    android:textColor="@color/dark_gray"
                    android:textSize="18sp"
                    android:gravity="right"
                    android:layout_marginLeft="320dp"
                    android:layout_marginStart="320dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="370dp"
                    android:background="@mipmap/myinfo_mod_click"
                    android:layout_marginStart="370dp" />
            </RelativeLayout>

            <!--密码-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="65dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:text="@string/myinfo_mod_psw"
                android:textColor="@color/black"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/myinfo_mod_psw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/myinfo_mod_psw"
                android:textColor="@color/dark_gray"
                android:textSize="18sp"
                android:gravity="right"
                android:layout_marginLeft="320dp"
                android:layout_marginStart="320dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="370dp"
                android:background="@mipmap/myinfo_mod_click"
                android:layout_marginStart="370dp" />
            </RelativeLayout>

            <!--年龄-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="65dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp"
                    android:text="@string/myinfo_mod_age"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/myinfo_mod_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/myinfo_mod_age"
                    android:textColor="@color/dark_gray"
                    android:textSize="18sp"
                    android:gravity="right"
                    android:layout_marginLeft="320dp"
                    android:layout_marginStart="320dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="370dp"
                    android:background="@mipmap/myinfo_mod_click"
                    android:layout_marginStart="370dp" />
            </RelativeLayout>

            <!--性别-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="65dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp"
                    android:text="@string/myinfo_mod_gender"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/myinfo_mod_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/myinfo_mod_gender"
                    android:textColor="@color/dark_gray"
                    android:textSize="18sp"
                    android:gravity="right"
                    android:layout_marginLeft="320dp"
                    android:layout_marginStart="320dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="370dp"
                    android:background="@mipmap/myinfo_mod_click"
                    android:layout_marginStart="370dp" />
            </RelativeLayout>

            <!--简介-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="65dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp"
                    android:text="@string/myinfo_mod_intro"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/myinfo_mod_intro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/myinfo_mod_intro1"
                    android:singleLine="true"
                    android:textColor="@color/dark_gray"
                    android:textSize="14sp"
                    android:gravity="right"
                    android:layout_marginLeft="180dp"
                    android:layout_marginStart="180dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="370dp"
                    android:background="@mipmap/myinfo_mod_click"
                    android:layout_marginStart="370dp" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>